syntax = "proto3";

package file_service;

option go_package = "github.com/vasile4ek/tages-test/proto;gen";

import "google/protobuf/timestamp.proto";

service FileService {
    rpc UploadFile(stream UploadRequest) returns (UploadResponse) {}
    rpc DownloadFile(DownloadRequest) returns (stream DownloadResponse) {}
    rpc ListFiles(ListRequest) returns (ListResponse) {}
}

message UploadRequest {
    oneof data {
        FileInfo info = 1;
        bytes chunk_data = 2;
    }
}

message FileInfo {
    string filename = 1;
}

message UploadResponse {
    string filename = 1;
    uint32 size = 2;
    string message = 3;
}

message DownloadRequest {
    string filename = 1;
}

message DownloadResponse {
    oneof data {
        FileInfo info = 1;
        bytes chunk_data = 2;
    }
}

message ListRequest {
}

message FileMetadata {
    string filename = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
    uint32 size = 4;
}

message ListResponse {
    repeated FileMetadata files = 1;
}